Update ToDo List without extra bonus requirements

--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <script defer type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/6e7ffc4b55.js" crossorigin="anonymous"></script>
-    <title>To do list</title>
+    <title>ToDo list</title>
 </head>
 
 <body>
+
     <header>
         <h2>ToDo list</h2>
     </header>
+    
     <main>
         <span>
-            <input id="inputText" type="text" value="">
+            <input id="inputText" type="text" placeholder="Enter a task.">
             <input type="button" id="button" value="Add Task" />
         </span>
         <ul id="list"></ul>
     </main>
+
     <footer>
         <h2>ToDo list</h2>
     </footer>
+
 </body>
 
 </html>
